@@ -1,0 +1,12 @@
+data:extend({
+	{
+		type = "double-setting",
+		setting_type = "startup",
+		name = "Redrawn-Space-Connections-map-scale",
+		forced_value = 1250,
+		default_value = 1250,
+		minimum_value = 1,
+		maximum_value = 100000,
+		hidden = true,
+	},
+})
